Integration with Redis

--- a/.env.example
+++ b/.env.example
@@ -12,5 +12,9 @@ SERVER_PORT_HTTPS=
 # MongoDB
 DATABASE=mongodb://host/
 
+# Redis
+REDIS_HOST=
+REDIS_PORT=
+
 # Ignores during the test
 JEST_IGNORE=True
