--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "mongoose": "^5.8.9",
     "node-datetime": "^2.1.2",
     "promise-queue": "^2.2.5",
+    "redis": "^2.8.0",
     "request": "^2.88.0",
     "serve-favicon": "^2.5.0",
     "swagger-express-mw": "^0.1.0",
